[metadata]
name = zecwallet
version = 1.0.1
author = Priveasy
author_email = Admin@Priveasy.org
description = A wrapper around the Zecwallet Command Line LightClient
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/P5vc/Zecwallet-Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = zecwallet
